* Bugfixes for the bezierArrowSmplGradient.
* htmlTable added table spanner functionality, some man-page update, removed the default NULL arguments in favor of the missing() funciton, and a few minor bugfixes.
* Bugfixed missing data for getDescriptionStats and generated a test-file in order to check most combinations that they work

Changes for 0.6.1.0
--------------------
* Added legend markers option for the forestplot2 function

Changes for 0.6.0.2
--------------------
* Fixed ticks for forestplot2 - the prFpGetGraphTicksAndClips used the exp() for regular values.
* Cleaned up some of the code for the fpDrawXXXCI functions


Changes for 0.6.0.1
--------------------
* Changed depends and imports for the package

Changes for 0.6.0.0
--------------------
* For LibreOffice compatibility htmlTable now includes caption inside the table when compatibility='LibreOffice'
* Split the package to exclude regression functions, these are now in the Greg package
* Added title and label options to transitionPlot
* Added a size-autofit for the transitionPlot text 

Changes for 0.5.8.2
--------------------
* htmlTable caused too large colspans when cgroup was set

Changes for 0.5.8.1
--------------------
* Bugfixes for printC&A and getDesc.
* Added a pvalueFormatter
* Fixed Intercept bug for get/printCrudeAndAdjusted - didn't include the intercept term

Changes for 0.5.8.0
--------------------
* Added to forestplot2 ability create customly drawn confidence intervals/boxes
* Generated diamond, circle and point custom draw functions for forestplot2
* Added forestplot2 compatibility for the summary
* Minor bugfixes behind the scenes
* Fixed issue with getCrudeAndAdjustedModelData mixing up rows for rms objects

Changes for 0.5.7.11
-------------------
* Added tfoot option to the htmlTable function
* Switched to the proper caption-align for htmlTable
* Added options for htmlTable() where you now can format the table counter text and change to Arabic numerals.